main.css
/* --------------Global---------------- */
body{
    font-family: 'Nunito', sans-serif; 
}

hr {
    overflow: visible; /* For IE */
    height: 30px;
    border-style: solid;
    border-color: black;
    border-width: 1.9px 0 0 0;
}

.no-js{
    display: none;
}

.inactive-nav{
    display: none;
}
/* --------------/Global---------------- */

/* --------------Top Header---------------- */
#top-header{
    background-color: #6b91af;
    padding-bottom: 0;
}

#phone-info img{
    padding: 5px 2px 5px 2px;
    margin: 10px 0 10px 0;
    background-color: white;
    border-radius: 100%;
    height:30px;
    width: 30px;
}

#phone-info span{
    color: white;
    padding-top: 10px;
}

#phone-info a{
    position: absolute;
    right: 0px;
    padding: 5px 10px 5px 10px;
    margin: 7px 20px 10px 0;
    color: white;
    background-color: black;
    border-radius: 5px;
}

#phone-info a:hover{
    -webkit-transform: scale(1.1);
    -ms-transform: scale(1.1);
    transform: scale(1.1);
    background-color: #303030;
}


/* --------------/Top Header---------------- */

/* --------------Navbar---------------- */

nav{
    background-color: #f5f1f0;
    margin-bottom: 20px;
}

nav a{
    color: black;
    padding-right: 8px;
}

#navbar-brand{
    height: 70px;
    padding-right: 15px;
}


/* --------------/Navbar---------------- */






/* --------------Carousel---------------- */

#carousel-container{
    padding-left: 0;
    padding-right: 0;
    padding-top: 80px;
    margin-bottom: 50px;
}

#carousel-slide{
    height: 650px;
}

.carousel-caption{
    padding-bottom: 50px;
    color: #f5f1f0;
}

#carousel-container h3{
    text-decoration: underline;
}

/* --------------/Carousel---------------- */

/* --------------Main Content---------------- */

#main-header-div{
    margin-top: 60px;
    margin-bottom: 60px;
}

.info-box{
    background-color: rgb(107,145,175, 0.9);
    font-size: 12pt;
}

.info-box h3, h4{
    padding: 30px 50px 5px 50px;
}

.info-box p{
    padding: 0 50px 5px 50px;;
}

.info-box button{
    margin-left: 50px;
    margin-bottom: 10px;
}

.right-align{
    text-align: right;
}

.right-align button{
    margin-right: 50px;
}

#main-content-div img{
    height: 500px;
    width: 200px;
}

#info-box-small{
    background-color: rgba(245, 245, 245, 0.4);
    margin: 30px;
}

/* Accomodation Main Content */

.info-box h5{
    margin-left: 50px;
    padding-bottom: 10px;
    font-weight: 2000;
}

.info-box ul{
    margin-left: 30px;
    padding-bottom: 30px;
}

.info-box li{
    color: black;
}
/* /Accomodation Main Content */

/* Weddings Main Content */

#wedding-h5{
    font-weight: 900;
}

.wedding-quote-div{
    background-color: #f5f1f0;
    margin-top: 30px;
    border-radius: 5px;
    box-shadow: 2px 1px 15px #333;
}

.wedding-quote-div p, span{
    padding-top: 20px;
    padding-bottom: 5px;
    padding-left: 20px;
}

.wedding-quote-div h5{
    padding-left: 20px;
}

.wedding-quote-div span{
    padding-bottom: 50px;
}

.wedding-quote-div:nth-of-type(2n){
    text-align: right;
    padding-right: 20px;
    padding-left: 0;
}
/* /Weddings Main Content */

/* Events Main Content */
    #function-img{
        background-image: url("img/images/events/function-room-1.jpg");
        background-repeat: no-repeat;
        background-size: cover;
    }

    #events-white{
        background-color: rgba(245, 245, 245, 0.6);
    }

    #events-white h4{
        padding-left: 20px;
    }

    #events-white h5{
        padding-top: 0;
        padding-bottom: 10px;
    }

    #events-coordinator-btn button{
        background-color: rgba(245, 245, 245, 0.6);
        width: 75%;
        padding: 5px;
        margin: 30px;
        border-radius: 5px;
    }

    #events-coordinator-btn button:hover{
        -webkit-transform: scale(1.1);
        -ms-transform: scale(1.1);
        transform: scale(1.1);
        background-color: #303030;
        color: white;
    }

    #funeral-container{
        background-image: url(img/images/events/funeral-1.jpg);
        background-repeat: no-repeat;
        background-size: cover;
    }

    #funeral-content-container{
        background-color: rgba(245, 245, 245, 0.9);
        padding: 20px;
    }
        /* Table Styling */
        .table {
            border-collapse: collapse;
            border-spacing: 0;
            width: 100%;
            margin-bottom: 1em;
            border: none;
        }

        table {
            border-spacing: 0;
            border-collapse: collapse;
        }

        td{
            font-size: 11pt;
        }

        .odd{
            background-color: #f9f9f9;
        }

        tr:hover{
            background-color: #adadac;
        }
        /* /Table styling */
/* /Events Main Content */

/* Offers Styling */

#offers-container{
    background-image: url(img/images/offers/wedding-table.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}

#offers-info{
    background-color: rgba(245, 245, 245, 0.75);
}

#offers-info h5{
    margin-left: 30px;
}

#offers-info p, button{
    margin-left: 50px;
    padding-right: 20px;
}

#offers-info button{
    margin-bottom: 20px;
}

/* /Offers Styling */

/* Directions Styling */

#directions-map-header{
    width: 100%;
}

#directions-container{
    background-image: url(img/images/directions/exterior-1.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}

#directions-container button{
    width: 80%;
    margin-left: 65px;
    padding: 6px;
    background-color: rgb(107,145,175, 0.95);
    color: white;
    border-radius: 5px;
}

#directions-container button:hover{
    background-color: rgba(65, 130, 180, 0.9);
}

#car-directions, #public-transport-directions{
    display: none;
}

/* /Directions Styling */

/* Contact Styling */

#contact-container{
    padding-top: 190px;
}

#contact-form{
    margin-right: 40px;
}

#contact-form, #contact-info{
    background-color: rgb(245, 245, 245);
    padding: 30px;
    border-radius: 5px;
    box-shadow: 10px 10px 8px #888888;
}

#contact-form h4, #contact-info h4, h5{
    padding: 0 0 5px 0;
}

#contact-submit-btn{
    color: white;
    background-color: rgb(107,145,175, 0.95);
    border-radius: 5px;
    padding: 5px 10px 5px 10px;
    margin-left: 0;
    margin-top: 7px;;
}

/* /Contact Styling */

/* --------------/Main Content---------------- */

/* --------------Email Subscription---------------- */

#email-sub-container{
    background-color: #f7f7f7;
    margin-top: 50px;
    margin-bottom: 50px;
    padding: 50px;
}

#email-sub-header{
    background-color: white;
    padding: 25px;
}

#email-sub-header h4{
    font-size: 3rem;
    text-decoration: underline;
}

#email-sub-header p{
    opacity: 0.5;
    font-style: italic;
}

#email-sub-form{
    background-color: #e9e9e9d7;
    padding: 30px;
}

#email-sub-form button{
    float: right; 
    background-color: black;
    color: white;
    border-radius: 5px;
}

#email-sub-form button:hover{
    -webkit-transform: scale(1.1);
    -ms-transform: scale(1.1);
    transform: scale(1.1);
    background-color: #303030;
}

/* --------------/Email Subscription---------------- */




/* --------------Footer Links---------------- */

#footer-link-container{
    background-color: #6b91af;  
}

#footer-link-div{
    background-color: #6b91af;
    padding-top: 20px;
    padding-bottom: 20px;
}

#footer-link-div h6, li{
    color: white;
}

#footer-link-div ul{
    list-style: none;
    padding: 0;
    list-style-type: none;
}
/* --------------/Footer Links---------------- */

/* --------------Footer---------------- */

footer{
    background-color: #303030;
    padding-top: 10px;
    padding-bottom: 10px;
}

footer span{
    color: white;
    font-size: 10pt;
}

/* --------------/Footer---------------- */

/* --------------Media Queries---------------- */

/* Sorts button positioning on larger view */
@media screen and (min-width: 992px) {
    #email-sub-form button{
        margin-top: -30px;
    }
  }

/* Turns off effect on mobile view */
@media screen and (min-width: 989px) {
    nav a:hover{
        -webkit-transform: scale(1.2);
        -ms-transform: scale(1.2);
        transform: scale(1.2);
        margin-left: 12px;
        margin-right: 12px; 
    } 
  }

  @media screen and (max-width: 991px) {
    #phone-info a{
        display: none;
    }

    .add-margin{
        margin-bottom: 30px;
    }

    /* Merging adjacent image into background on mobile view */
    #merge-wedding-background{
        background-image: url("img/images/weddings/wedding-3.jpg");
        background-repeat: no-repeat;
        background-size: cover;
    }

    .merge-wedding{
        background-color: rgba(245, 245, 245, 0.75);
    }

    .merge-hide{
        display: none;
    }

    #contact-form{
        margin-right: 0;
        margin-bottom: 40px;
    }

  }
/* --------------/Media Queries---------------- */

